<?xml version="1.0"?>
<package format="3">
  <name>force_sensor</name>
  <version>0.0.0</version>
  <description>The force_sensor package</description>
  <maintainer email="cl@todo.todo">cl</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>launch_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>serial</depend>
  <depend>force_sensor_msg</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
