<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mtactuator_python</name>
  <version>0.0.0</version>
  <description>python module communicate with mtactuator</description>
  <maintainer email="493237542@qq.com">lzc</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>rclpy</depend>
  <depend>mtactuator_msg</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
